# sqlx-with-testcontainers

./: Cargo.toml  LICENSE  README.md
.sqlx/: query-9d79bfab45f70535a5551478ddf8ccf3d18d7bcf8c2c8eeb95ae7c01f936c539.json
migrations/: 20240109103315_users.sql
src/: lib.rs
tests/: integration.rs
tests/integration/: users.rs
